example/test.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: sleep
spec:
  replicas: 1
  template:
    metadata:
      annotations:
        app: "sidecar1"
      labels:
        app: sleep
    spec:
      containers:
        - name: sleep
          image: centos:7
          command: ["sleep", "999d"]
          imagePullPolicy:
